--- a/literatur.bib
+++ b/literatur.bib
@@ -163,3 +163,24 @@
   author={Bakirova, Tatiana and Sch{\"a}fer, Tim and Koch, Ina},
   journal={GCB 2013 G{\"o}ttingen-Poster Abstracts}
 }
+
+@article{sillitoe2014cath,
+  title={CATH: comprehensive structural and functional annotations for genome sequences},
+  author={Sillitoe, Ian and Lewis, Tony E and Cuff, Alison and Das, Sayoni and Ashford, Paul and Dawson, Natalie L and Furnham, Nicholas and Laskowski, Roman A and Lee, David and Lees, Jonathan G and others},
+  journal={Nucleic acids research},
+  pages={gku947},
+  year={2014},
+  publisher={Oxford Univ Press}
+}
+
+@article{das2015diversity,
+  title={Diversity in protein domain superfamilies},
+  author={Das, Sayoni and Dawson, Natalie L and Orengo, Christine A},
+  journal={Current opinion in genetics \& development},
+  volume={35},
+  pages={40--49},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
