--- a/arbeit.tex
+++ b/arbeit.tex
@@ -275,51 +275,6 @@ PDB-ID & CATH-ID        & Klassifizierung      \\ \hline
 F\"ur diesen Datensatz wurden alle \textit{Graphlet}-Vektoren berechnet. Die paarweisen Distanzen dieser Vektoren zueinander wurden mit der RGF und dem modifizierten Jaccard-Index berechnet. F\"ur die berechneten Distanzmatrizen wurden die Korrelationen der Distanzen in den verschiedenen Formaten berechnet und sie wurden mit den von PDBeFold berechneten Distanzen verglichen. 
 
 
-\subsection{Fallstudien - Datensatz 2}
-
-F\"ur die zweite Fallstudie wurden Proteine ausgew\"ahlt, die weniger engen Beschr\"ankungen unterliegen. Die meisten von ihnen besitzen mehrere - h\"aufig unterschiedliche - Dom\"anen und mehrere Polypeptidketten. Sie wurden so ausgew\"ahlt, dass es zu jedem Protein mindestens ein anderes gibt, das die selbe Topologie hat, um festzustellen, ob ein solches Paar auch immer die niedrigsten Distanzen erh\"alt.
-
-Weiterhin wurde darauf geachtet, diese Proteine so auszuw\"ahlen, dass die Analyse durch \textit{Graphlets} besonders schwierig ausf\"allt. Es sind Proteine aus der Familie der \textit{TIM-Barrels} enthalten, deren Strukturen sich stark unterscheiden, auch wenn sie als homolog angesehen werden und es wurden Paare von PDB-Strukturen eingef\"ugt, die sich nur durch eine Konformations\"anderung unterscheiden.
-
-
-
-
-\begin{table}[h!]
-\label{tab:set2}
-\begin{tabular}{ | c || c | c | }
-\hline
-PDB-ID & CATH-ID & Klassifizierung \\ \hline
-2UTG & 1.10.210.10 & Steroid-bindend  \\ \hline % uteroglobin - pdb-klasse: steroid bindend
-1VIB & 1.10.287.120 & Neurotoxin \\ \hline % neurotoxin - pdb-klasse: neurotoxin
-1QPU & 1.20.120.10 & Elektronentransport  \\ \hline % Cytochrom b
-1QQ3 & 1.20.120.10 & Elektronentransport \\ \hline % cytochrom b oxidiert
-2XL6 & 1.20.120.10 & Elektronentransport \\ \hline % cytochrom c mit NO
-2YL1 & 1.20.120.10 & Elektronentransport\\ \hline% cytochrom c mit CO
-1rxq & 1.20.120.450 & metall-bindendes protein \\ \hline
-2qe9 & 1.20.120.450 & Hydrolase \\ \hline% metall abhaengige hydrolase - pdb-head: hydrolase
-2RD9 & 1.20.120.450 & Hydrolase \\ \hline% metall abhaengige hydrolase - pdb-head: hydrolase
-1M4R & 1.20.1250.10 & Cytokin \\ \hline% interleukin 22 - pdb-head: cytokin
-1HGU & 1.20.1250.10 & Hormon \\ \hline% wachstumshormon - pdb-head: hormon
-1PV6 & 1.20.1250.20 & Transportprotein \\ \hline% lactose permease - pdb-head: transportprotein
-1AWR & 2.40.100.10 &  Isomerase-Peptid-Komplex \\ \hline% enzymkomplex cypa und hagpia ?
-1D9C & 1.20.1250.10 & Immunsystem \\ \hline% BOVINE INTERFERON-GAMMA
-1NGL & 2.40.128.20 & Transportprotein \\ \hline% transportprotein
-1N7V & 2.105.10.10 &  Virales Protein \\ \hline% riesiges Virusprotein - rezeptor bindendes protein
-7TIM & 3.20.20.70 & Intramolekulare Oxidoreductase \\ \hline% triosephosphat isomerase phosphat-komplex
-1NEY & 3.20.20.70 & Isomerase  \\ \hline% triosephosphat isomerase DHAP-komplex
-2V5L & 3.20.20.70 & Oxidoreductase  \\ \hline%  TRYPANOSOMAL TRIOSEPHOSPHATE ISOMERASE - neue kristallform
-1V3Z & 3.30.70.100 & Hydrolase \\ \hline% Acylphosphatase
-1A17 & 1.25.40.10  & Hydrolase \\ \hline% pdb-header sagt hydrolase
-1ar0 & 3.10.450.50 & Transport  \\ \hline
-\end{tabular}
-\caption{Proteine des zweiten Datensatzes}
-\end{table}
-
-
-
-
-
-
 
 \subsection{Der PDBTop500-Datensatz}
 
@@ -447,9 +402,9 @@ F\"ur das Alphabet der SSE- und Komplexgraphen $ \sum_{SSE} := \{ H, E, L \} $ u
 \begin{subequations}
 \begin{align}
 p_2 :=       (HH, HE, HL, EE, EL, LL) \\
-p_{3-Weg}   := (HHH, HEH, HHE, HEE, EHE,
-                HEL, LHE, ELH, HLH, HHL,
-                HLL, LHL, EEE, ELE, EEL,
+p_{3-Weg}   := (HHH, HEH, HHE, HEE, EHE, \\
+                HEL, LHE, ELH, HLH, HHL, \\
+                HLL, LHL, EEE, ELE, EEL, \\
                 ELL, LEL, LLL) \\
 p_{3-Kreis} := (HHH, HEH, HEE, HEL, LEH,
                 HLH, HLL, EEE, ELE, ELL, LLL) \\
@@ -461,12 +416,12 @@ Die Vektoren $a_2, a_{3-Weg}$ und $a_{3-Kreis}$ beschreiben die Worte f\"ur \tex
 \begin{subequations}
 \begin{align}
 a_2 :=         (hh, hp, ha, h?, pp, pa, p?, aa, a?, ??) \\ 
-a_{3-Weg} :=   (hhh, hph, hhp, hpp, php, hpa, ahp, pah, hp?, ?hp,
-                p?h, hah, hha, haa, aha, ha?, ?ha ,a?h, h?h, hh?, 
-                h??, ?h?, ppp, pap, ppa, paa, apa, pa?, ?pa, a?p,
+a_{3-Weg} :=   (hhh, hph, hhp, hpp, php, hpa, ahp, pah, hp?, ?hp,\\
+                p?h, hah, hha, haa, aha, ha?, ?ha ,a?h, h?h, hh?, \\
+                h??, ?h?, ppp, pap, ppa, paa, apa, pa?, ?pa, a?p, \\
                 p?p, pp?, p??, ?p?, aaa, a?a, aa?, a??, ?a?, ???) \\
-a_{3-Kreis} := (hhh, hph, hpp, hpa, aph, hp?, ?ph, hah, haa, ha?,
-                ?ah, h?h, h??, ppp, pap, paa, pa?, ?ap, p?p, p??,
+a_{3-Kreis} := (hhh, hph, hpp, hpa, aph, hp?, ?ph, hah, haa, ha?, \\
+                ?ah, h?h, h??, ppp, pap, paa, pa?, ?ap, p?p, p??, \\
                 aaa, a?a, a??, ???)
 \end{align}
 \end{subequations}
@@ -525,7 +480,7 @@ F\"ur die Komplexgraphen zeigt die Tabelle wieder eine hohe \"Ahnlichkeite unter
 F\"ur den PDBTop500-Datensatz wurden \textit{Graphlet}-Vektoren der drei verschiedenen Graphenformate berechnet. Diese Vektoren wurden f\"ur jedes Format in einer .csv-Datei zusammengefasst und f\"ur jede dieser Dateien wurden \textit{Boxplots} erstellt.
 
 In diese Boxplots wurden zus\"atzlich die relativen H\"aufigkeiten der bereits beschriebenen Aldolasen eingetragen. Hiermit kann festgestellt werden, ob die Superfamilie der Aldolasen anhand ihrer \textit{Graphlets} von anderen Superfamilien unterscheidbar ist.
-Der Boxplot \ref{fig:aaplot} stellt diese Daten f\"ur die Aminos\"auregraphen dar. Da die relative H\"aufigkeiten der \textit{Graphlets} in den Aminos\"auren deutlich kleiner sind, als bei Proteingraphen und Komplexgraphen, weil es mehr \textit{Graphlte}-Worte gibt, wurde die Skala der y-Achse logarithmiert.
+Der Boxplot \ref{fig:aaplot} stellt diese Daten f\"ur die Aminos\"auregraphen dar. Da die relative H\"aufigkeiten der \textit{Graphlets} in den Aminos\"auren deutlich kleiner sind, als bei Proteingraphen und Komplexgraphen, weil es mehr \textit{Graphlet}-Worte gibt, wurde die Skala der y-Achse logarithmiert.
 
 
 
@@ -539,7 +494,7 @@ Der Boxplot \ref{fig:aaplot} stellt diese Daten f\"ur die Aminos\"auregraphen da
 
 
 
-Unter den \textit{Graphlets} ohne Markierungen finden gibt es nur zwei bei denen sich die relativen H\"aufigkeiten der Aldolasen nicht mit denen des Datensatzes \"uberlappen. Dies sind die \textit{Graphlets} $g_8$ und $g_{15}$ in \ref{fig:5graphlets}, die in den Aldolasen nicht gefunden werden.
+Unter den \textit{Graphlets} ohne Markierungen in Abbildung \ref{fig:aaplot} gibt es nur zwei bei denen sich die relativen H\"aufigkeiten der Aldolasen nicht mit denen des Datensatzes \"uberlappen. Dies sind die \textit{Graphlets} $g_8$ und $g_{15}$ in \ref{fig:5graphlets}, die in den Aldolasen nicht gefunden werden.
 
 
 Unter den markierten \textit{Graphlets} gibt es deutlich mehr Unterschiede. Sieben verschiedene \textit{Graphlet}-Verteilungen \"uberlappen sich nicht. Die ersten drei hiervon entsprechen den \textit{Graphlet}-Worten h?, c? und ??. Diese stehen f\"ur Kanten zwischen unpolaren Residuen und Liganden, Kanten zwischen sauren oder basischen Residuen und Liganden und Kanten zwischen Liganden,
@@ -564,8 +519,9 @@ Dies gilt f\"ur das 4-\textit{Graphlet} $g_6$, das 5-\textit{Graphlet} $g_13$. U
 \end{sidewaysfigure}
 
 F\"ur die Komplexgraphen in Abbildung \ref{fig:cgplot} finden wir die st\"arksten Unterschiede zwischen den Verteilungen der Aldolasen und denen des Referenzdatensatzes. F\"ur die unmarkierten \textit{Graphlets} $g_1$ und $g_2$ in \ref{fig:3graphlets}, $g_2$, $g_3$ und $g_6$ in \ref{fig:4graphlets} sowie $g_6$, $g_{10}$, $g_{12}$, $g_{13}$, $g{16}$, $g_{18}$, $g_{20}$ und $g_{21}$ in \ref{fig:5graphlets}.
+Die st\"arksten Abweichungen der Verteilungen finden wir bei den markierten \textit{Graphlets} f\"ur jene, die durch die Worte HL, LLL, und EEE repr\"asentiert sind. F\"ur das Wort LL finden wir diese Abweichungen sowohl f\"ur das markierte \textit{Graphlet}, das $g_1$ in \ref{fig:3graphlets} entspricht, als auch f\"ur jenes, das $g_2$ repr\"asentiert.
+Damit sind die Unterschiede der \textit{Graphlet}-Verteilungen zwischen dem Referenzdatensatz und den Aldolasen in den Komplexgraphen am gr\"o"sten.
 
-Bei den markierten \textit{Graphlets}  
 
 \chapter{Diskussion und Ausblick}
 
@@ -591,17 +547,32 @@ Dadurch, dass dies in den zusammenh\"angenden \textit{Graphlets} nicht ber\"ucks
 
 Im Gegensatz hierzu sind die Aminos\"auregraphen dieser Fallstudie zusammenh\"angend. Dies erkl\"art die h\"ohere Genauigkeit.
 
+Eine weitere Erkl\"arung f\"ur die h\"ohere Genauigkeit der 
+
+
+%\begin{table}
+%\label{tab:correlations}
+%\begin{tabular}{c c c c}
+%Datensatz & AAG     &     PG &     CG \\
+%AAG       &  1      & 0.6911 & 0.7656 \\
+%PG        &  0.6911 &      1 & 0.6939 \\
+%CG        &  0.6939 & 0.6939 & 1      \\
+%\end{tabular}
+%\caption{Korrelationen der \"Ahnlichkeitsbewertungen der verschiedenen Graphformate}
+%\end{table}
+
 \subsubsection{Vergleich der Distanzma"se}
 
-Wirft man einen Blick in die Tabellen, sieht es zun\"achst so aus, als w\"urden sich Jaccard-Index und RGF \"ahnlich gut eignen, um die \"Ahnlichkeit der \textit{Graphlet}-Vektoren zu bewerten. Die RGF stellt eine \emph{Distanz} zwischen zwei Vektoren dar. Dementsprechend steht ein RGF-Wert von 0 f\"ur die Gleichheit zweier Vektoren, je h\"oher der Wert ist, desto h\"oher ist der Abstand zwischen den beiden Vektoren. Der modifizierte Jaccard-Index, der hier Verwendung findet, z\"ahlt Elemente, die sich um h\"ochstens einen Faktor $k$ unterscheiden. Ein RGF-Wert von 1 bedeutete, dass alle Elemente beider Vektoren sich h\"ochstens um den Faktor $k$ unterscheiden. Ein Wert von 0 bedeutet, dass alle Elemente sich um mehr als den Faktor $k$ unterscheiden. Dementsprechend w\"urde man erwarten, dass die \textit{Pearson}-Korrelation von RGF und Jaccard-Index negativ ist. Die folgende Tabelle zeigt jedoch, dass diese f\"ur alle berechneten Daten positiv ausf\"allt. 
+Wirft man einen Blick in die Tabellen, sieht es zun\"achst so aus, als w\"urden sich Jaccard-Index und RGF \"ahnlich gut eignen, um die \"Ahnlichkeit der \textit{Graphlet}-Vektoren zu bewerten. Die RGF stellt eine \emph{Distanz} zwischen zwei Vektoren dar. Dementsprechend steht ein RGF-Wert von 0 f\"ur die Gleichheit zweier Vektoren, je h\"oher der Wert ist, desto h\"oher ist der Abstand zwischen den beiden Vektoren. Der modifizierte Jaccard-Index, der hier Verwendung findet, z\"ahlt Elemente, die sich um h\"ochstens einen Faktor $k$ unterscheiden. Ein RGF-Wert von 1 bedeutete, dass alle Elemente beider Vektoren sich h\"ochstens um den Faktor $k$ unterscheiden. Ein Wert von 0 bedeutet, dass alle Elemente sich um mehr als den Faktor $k$ unterscheiden. Dementsprechend w\"urde man erwarten, dass die \textit{Pearson}-Korrelation von RGF und Jaccard-Index negativ ist. Die folgende Tabelle zeigt jedoch, dass diese f\"ur die Messungen der Fallstudie positiv ausf\"allt. 
 
 
 
-\subsection{Datensatz 2}
 
-\subsection{PDBTop500-Datensatz}
+\subsection{PDBTop500-Datensatz und Aldolasen}
 
+Der Vergleich der Proteine aus dem PDBTop500-Datensatz mit den Aldolasen hat gezeigt, dass sich die Verteilungen der \textit{Graphlets} f\"ur einige \textit{Graphlets} so stark unterscheiden, dass eine klare Unterscheidung der beiden anhand ihrer Verteilungen m\"oglich zu sein scheint.
 
+ 
 
 
 
@@ -618,9 +589,11 @@ Diese Zusammenfassung lie"se sich dadurch bewerkstelligen, dass man die Funktion
 
 \subsection{\"Ahnlichkeitssuche}
 
+
+
+
 \subsection{\textit{Graphlet}-Motive}
 
-\subsection{Klassifizierung mit \textit{Support-Vector-Machines} und Entscheidungsb\"aumen}
 
 
 
@@ -655,48 +628,6 @@ Diese Zusammenfassung lie"se sich dadurch bewerkstelligen, dass man die Funktion
 %TODO: UML Diagramm so, konvertieren, dass es eine Bounding Box hat und wieder einf\"ugen
 
 \section{Tabellenverzeichnis}
-
-\newpage
-
-
-\begin{sidewaystable}
-
-\definecolor{fGreen}{rgb}{0.13,0.54,0.13}
-
-\scalebox{0.8}{
-\begin{tabular}[h!]{l l l l l l l l l l l l l l l l l l l l l l l l}
-
-PDB-ID & \cellcolor{fGreen!100}2utg & 1vib & 1qpu & 1qq3 & 2xl6 & 2yl1 & 1rxq & 2qe9 & 2rd9 & 1m4r & 1hgu & 1pv6 & 1awr & 1d9c & 1ngl & 1n7v & 7tim & 1ney & 1v3z & 1a17 & 1ar0 & 2v5l &  \\
-2utg &   X   & 8.915 & 8.626 & 8.150 & 9.759 & 13.62 & 6.408 & 8.128 & 7.384 & 5.158 & 4.944 & 3.570 & 11.67 & 4.392 & 7.387 & 13.02 & 9.171 & 8.737 & 8.025 & 2.490 & 9.329 & 6.253 &  \\
-1vib & 8.915 &   X   & 15.54 & 15.89 & 16.89 & 21.08 & 15.22 & 16.80 & 16.23 & 13.39 & 13.26 & 12.32 & 17.13 & 12.55 & 11.80 & 17.87 & 17.44 & 17.07 & 13.78 & 7.943 & 16.33 & 14.27 &  \\
-1qpu & 8.626 & 15.54 &   X   & 1.451 & 3.655 & 5.632 & 6.272 & 8.187 & 7.539 & 5.410 & 7.849 & 7.087 & 11.01 & 7.053 & 9.864 & 12.54 & 8.261 & 8.829 & 8.822 & 9.192 & 9.692 & 6.462 &  \\
-1qq3 & 8.150 & 15.89 & 1.451 &   X   & 3.614 & 5.651 & 6.064 & 7.554 & 7.252 & 5.087 & 7.413 & 6.776 & 11.02 & 6.721 & 9.918 & 12.56 & 7.787 & 8.354 & 8.892 & 9.531 & 9.216 & 6.019 &  \\
-2xl6 & 9.759 & 16.89 & 3.655 & 3.614 &   X   & 4.518 & 5.106 & 5.523 & 5.482 & 5.514 & 8.147 & 8.655 & 8.374 & 6.685 & 8.091 & 9.919 & 5.950 & 6.459 & 6.255 & 10.30 & 7.054 & 4.716 &  \\
-2yl1 & 13.62 & 21.08 & 5.632 & 5.651 & 4.518 &   X   & 7.737 & 7.197 & 7.589 & 8.855 & 11.36 & 11.82 & 11.53 & 10.34 & 12.29 & 12.94 & 8.343 & 8.923 & 10.59 & 14.75 & 10.14 & 8.137 &  \\
-1rxq & 6.408 & 15.22 & 6.272 & 6.064 & 5.106 & 7.737 &   X   & 2.271 & 1.563 & 1.846 & 4.457 & 4.428 & 8.105 & 2.685 & 6.737 & 10.11 & 4.059 & 4.769 & 5.299 & 8.066 & 5.910 & 3.043 &  \\
-2qe9 & 8.128 & 16.80 & 8.187 & 7.554 & 5.523 & 7.197 & 2.271 &   X   & 2.024 & 4.006 & 6.167 & 5.959 & 8.708 & 4.649 & 8.068 & 10.83 & 4.470 & 5.180 & 6.065 & 9.575 & 6.728 & 4.542 &  \\
-2rd9 & 7.384 & 16.23 & 7.539 & 7.252 & 5.482 & 7.589 & 1.563 & 2.024 &   X   & 3.205 & 5.325 & 5.829 & 7.137 & 3.853 & 6.677 & 9.126 & 3.049 & 3.785 & 4.747 & 9.046 & 5.086 & 3.123 &  \\
-1m4r & 5.158 & 13.39 & 5.410 & 5.087 & 5.514 & 8.855 & 1.846 & 4.006 & 3.205 &   X   & 3.657 & 3.784 & 8.468 & 1.837 & 6.243 & 10.41 & 5.063 & 5.650 & 5.068 & 6.336 & 5.972 & 2.922 &  \\
-1hgu & 4.944 & 13.26 & 7.849 & 7.413 & 8.147 & 11.36 & 4.457 & 6.167 & 5.325 & 3.657 &   X   & 4.692 & 9.337 & 3.187 & 5.776 & 10.59 & 6.059 & 5.603 & 6.003 & 7.045 & 6.636 & 3.742 &  \\
-1pv6 & 3.570 & 12.32 & 7.087 & 6.776 & 8.655 & 11.82 & 4.428 & 5.959 & 5.829 & 3.784 & 4.692 &   X   & 12.09 & 4.568 & 8.081 & 13.67 & 7.678 & 8.304 & 8.510 & 4.926 & 9.202 & 5.753 &  \\
-1awr & 11.67 & 17.13 & 11.01 & 11.02 & 8.374 & 11.53 & 8.105 & 8.708 & 7.137 & 8.468 & 9.337 & 12.09 &   X   & 7.762 & 7.577 & 2.196 & 4.751 & 4.070 & 3.972 & 11.87 & 3.395 & 6.506 &  \\
-1d9c & 4.392 & 12.55 & 7.053 & 6.721 & 6.685 & 10.34 & 2.685 & 4.649 & 3.853 & 1.837 & 3.187 & 4.568 & 7.762 &   X   & 6.366 & 9.743 & 5.605 & 5.246 & 4.468 & 5.626 & 6.116 & 3.637 &  \\
-1ngl & 7.387 & 11.80 & 9.864 & 9.918 & 8.091 & 12.29 & 6.737 & 8.068 & 6.677 & 6.243 & 5.776 & 8.081 & 7.577 & 6.366 &   X   & 8.064 & 6.805 & 6.711 & 4.658 & 8.473 & 5.325 & 4.582 &  \\
-1n7v & 13.02 & 17.87 & 12.54 & 12.56 & 9.919 & 12.94 & 10.11 & 10.83 & 9.126 & 10.41 & 10.59 & 13.67 & 2.196 & 9.743 & 8.064 &   X   & 6.405 & 5.675 & 5.484 & 13.53 & 4.509 & 7.987 &  \\
-7tim & 9.171 & 17.44 & 8.261 & 7.787 & 5.950 & 8.343 & 4.059 & 4.470 & 3.049 & 5.063 & 6.059 & 7.678 & 4.751 & 5.605 & 6.805 & 6.405 &   X   & 0.919 & 3.869 & 11.02 & 2.858 & 3.619 &  \\
-1ney & 8.737 & 17.07 & 8.829 & 8.354 & 6.459 & 8.923 & 4.769 & 5.180 & 3.785 & 5.650 & 5.603 & 8.304 & 4.070 & 5.246 & 6.711 & 5.675 & 0.919 &   X   & 3.500 & 10.59 & 2.683 & 3.646 &  \\
-1v3z & 8.025 & 13.78 & 8.822 & 8.892 & 6.255 & 10.59 & 5.299 & 6.065 & 4.747 & 5.068 & 6.003 & 8.510 & 3.972 & 4.468 & 4.658 & 5.484 & 3.869 & 3.500 &   X   & 8.286 & 2.693 & 3.435 &  \\
-1a17 & 2.490 & 7.943 & 9.192 & 9.531 & 10.30 & 14.75 & 8.066 & 9.575 & 9.046 & 6.336 & 7.045 & 4.926 & 11.87 & 5.626 & 8.473 & 13.53 & 11.02 & 10.59 & 8.286 &   X   & 10.56 & 7.612 &  \\
-1ar0 & 9.329 & 16.33 & 9.692 & 9.216 & 7.054 & 10.14 & 5.910 & 6.728 & 5.086 & 5.972 & 6.636 & 9.202 & 3.395 & 6.116 & 5.325 & 4.509 & 2.858 & 2.683 & 2.693 & 10.56 &   X   & 3.679 &  \\
-2v5l & 6.253 & 14.27 & 6.462 & 6.019 & 4.716 & 8.137 & 3.043 & 4.542 & 3.123 & 2.922 & 3.742 & 5.753 & 6.506 & 3.637 & 4.582 & 7.987 & 3.619 & 3.646 & 3.435 & 7.612 & 3.679 &   X   &  \\
-
-
-\end{tabular}}
-
-\end{sidewaystable}
-\newpage
-
-
 
 
 \begin{table}
@@ -868,19 +799,6 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 
 \end{tabular}}
 \caption{Jaccard-Indizes der Komplexgraphen. In den Zellen der Tabelle stehen die Jaccard-Indizes f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 gr\"o"sten Indizes gr\"un unterlegt. Je dunkler das gr\"un ist, desto gr\"o"ser der Index}
-\end{table}
-
-
-\begin{table}
-\label{tab:correlations}
-\begin{tabular}{c c c c}
-Datensatz & AAG     &     PG &     CG \\
-AAG       &  1      & 0.6911 & 0.7656 \\
-PG        &  0.6911 &      1 & 0.6939 \\
-CG        &  0.6939 & 0.6939 & 1      \\
-
-\end{tabular}
-\caption{Korrelationen der \"Ahnlichkeitsbewertungen der verschiedenen Graphformate}
 \end{table}
 
 
